2005-01-24  Alexander Malysh <amalysh at kannel.org>
    * gw/urltrans.c: fixed bug #174.
      Thanks to chandave for provided patch.

2005-01-23  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: apllied patch that includes some http server fixes:
      - don't close listen filedescriptor when accept failed (that can be caused
        bei client just now disconnected or network error)
      - added 'active_list' that saves all active http clients and so while
        shutdown all active clients can be disconnected gracefully (w/o fdset
        warning about active entries) and when listen port removed all active
        clients for this port could be disconnected.
      [Msg-Id: <csluqr$bah$1@sea.gmane.org>]

2005-01-23  Alexander Malysh <amalysh at kannel.org>
    * gw/bb_boxc.c: applied patch that change behaviour in communication
      thread creation. With this patch threads are created only after successful
      accept and so eliminate possible DOS.

2005-01-21  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed bug #165. we now always send validity &
      deferred time in UTC.

2005-01-21  Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwmem-check.c: added backtrace support. w/o backtrace is this
      module really hard to use.
      [Msg-Id: csodge$rfm$1@sea.gmane.org>]

2005-01-20  Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed segfault and compiler warnings on a x86_64 (Intel Xeon).
    * gw/smsc/smsc_at.c: fixed compiler warnings on a 64bite OS.
      Thanks to Ilan Aelion <ilan.aelion at dimoco.at>.
      [Msg-Id: <200412311337.12104.ilan.aelion@dimoco.at>]

2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed bug #178 and similar bugs.
      Additionaly fixed indentation.
      Thanks to sradman for bug report.

2005-01-19  Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: fixed bug #173.
      Thanks to joergent.
