@@ -1,4 +1,4 @@
-#!/bin/sh 
+#!/bin/bash 
 # 
 # Use `test/test_http{,_server}' to test gwlib/http.c. 
 # Incuding the SSL client and server componentes, if, of course, SSL has been
